--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,48 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+"psycopg2-binary" = "*"
+celery = "*"
+dj-database-url = "*"
 django = "*"
+django-anymail = {version = "*",extras = ["postmark"]}
+django-celery-beat = "*"
+django-celery-results = "*"
+django-cors-headers = "*"
+django-debug-toolbar = "*"
+django-environ = "*"
+django-filter = "*"
+django-log-request-id = "*"
+django-oauth-toolkit = "*"
+django-ordered-model = "*"
+django-otp = "*"
+django-ratelimit = "*"
+django-recaptcha = "*"
+django-redis = "*"
+django-safedelete = "*"
+django-timezone-field = "*"
+django-webpack-loader = "*"
+djangorestframework = "*"
+drf-extra-fields = "*"
+gunicorn = "*"
+newrelic = "*"
+premailer = "*"
+pyjwt = "*"
+python-json-logger = "*"
+redis="*"
+requests = "*"
+stripe = "*"
+whitenoise = "*"
 
 [dev-packages]
+attrs = "*"  # black wants this but doens't include it as a dep
+black = "*"
+dj-inmemorystorage = "*"
+factory-boy = "*"
+flake8 = "*"
+flake8-django = "*"
+freezegun = "*"
+httmock = "*"
 
 [requires]
 python_version = "3.9"
