--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 "psycopg2-binary" = "*"
 celery = "*"
 django = "*"
+django-allauth = "*"
 django-anymail = {version = "*",extras = ["postmark"]}
 django-celery-beat = "*"
 django-celery-results = "*"
