Fix postgis issue

--- a/.github/workflows/after-push.yml
+++ b/.github/workflows/after-push.yml
@@ -11,7 +11,7 @@ env:
   AWS_SECRET_ACCESS_KEY: AWS_SECRET_ACCESS_KEY
   DASHBOARD_CLIENT_ID: DASHBOARD_CLIENT_ID
   DASHBOARD_URL: DASHBOARD_URL
-  DATABASE_URL: postgis://postgres@localhost/postgres
+  DATABASE_URL: postgres://postgres@localhost/postgres
   RECAPTCHA_PRIVATE_KEY: RECAPTCHA_PRIVATE_KEY
   RECAPTCHA_PUBLIC_KEY: RECAPTCHA_PUBLIC_KEY
   REDIS_URL: redis://localhost:6379
