--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,41 +1,32 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Server",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
-            "args": [
-                "runserver"
-            ],
-            "django": true
-        },
-        {
-            "name": "Tests (all)",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
-            "args": [
-                "test",
-                "--noinput",
-            ],
-            "django": true
-        },
-        {
-            "name": "Tests (current file)",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/manage.py",
-            "args": [
-                "test",
-                "`echo -n ${relativeFileDirname} | tr \/ .`.${fileBasenameNoExtension}",
-                "--noinput",
-            ],
-            "django": true
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Server",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/manage.py",
+      "args": ["runserver", "0.0.0.0:8000"],
+      "django": true
+    },
+    {
+      "name": "Tests (all)",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/manage.py",
+      "args": ["test", "--noinput", "--pattern=*_tests.py"],
+      "django": true
+    },
+    {
+      "name": "Tests (fail-fast)",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/manage.py",
+      "args": ["test", "--noinput", "--failfast", "--pattern=*_tests.py"],
+      "django": true
+    }
+  ]
 }
