--- a/.github/workflows/after-push.yml
+++ b/.github/workflows/after-push.yml
@@ -66,4 +66,4 @@ jobs:
         run: pipenv run ./manage.py collectstatic --noinput
 
       - name: Running tests
-        run: pipenv run ./manage.py test --noinput --pattern="*_tests.py"
+        run: pipenv run ./manage.py test --noinput --pattern="*_tests.py" -v 2
